--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 spring.application.name=opentimestamp-poc
 
-#Si se usara base de datos, configurar!!!
-# spring.datasource.url=jdbc:postgresql://db:5432/otsdb
-# spring.datasource.username=otsuser
-# spring.datasource.password=secret
-# spring.jpa.hibernate.ddl-auto=update
-
 # Limites de upload
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=100MB
 
-# Timeout personalizados si necesitas
-# ots.blockstream.api=https://blockstream.info/api
+# Fuerza Spring Boot a usar modo reactivo (Netty)
+spring.main.web-application-type=reactive
+
+# Aumentar timeouts si lo necesitás (ejemplo)
+spring.http.codecs.max-in-memory-size=10MB
